Uploaded image for project: 'Qt'
  1. Qt
  2. QTBUG-32510

QQuickPaintedItem does not respect contentSize()/setContentsSize() correctly

    XMLWordPrintable

Details

    • Bug
    • Resolution: Done
    • Not Evaluated
    • 5.6.0
    • 5.1.0
    • Quick: SceneGraph
    • None
    • win 7 64bit, Nvidia Quadro 600
    • 0c7349fa9621f6460b754c2b3595d1c0f1d02ec4

    Description

      For a QQuickPaintedItem if setContentsScale( 2.0 ) ( or setContentsSize() ) is set then the contents rendered in paint appears scaled in a transformed location. According to the documentation I would expect the render texture to be twice the size and painted at half the scale.

      e.g.
      setContentsScale( 2 )

      void QQuickGraphicsView::paint( QPainter * painter )

      { painter->drawRect( 10, 10, 100, 200 ); }

      Attachments

        Issue Links

          No reviews matched the request. Check your Options in the drop-down menu of this sections header.

          Activity

            People

              sletta Gunnar Sletta
              emmet.spier@2d3.com Emmet Spier
              Votes:
              0 Vote for this issue
              Watchers:
              6 Start watching this issue

              Dates

                Created:
                Updated:
                Resolved:

                Gerrit Reviews

                  There are no open Gerrit changes