src/quick/items/qquickpainteditem.h
@@ -48,6 +48,8 @@ class Q_QUICK_EXPORT QQuickPaintedItem : public QQuickItem
     Q_PROPERTY(QColor fillColor READ fillColor WRITE setFillColor NOTIFY fillColorChanged)
     Q_PROPERTY(qreal contentsScale READ contentsScale WRITE setContentsScale NOTIFY contentsScaleChanged)
     Q_PROPERTY(RenderTarget renderTarget READ renderTarget WRITE setRenderTarget NOTIFY renderTargetChanged)
+    Q_PROPERTY(QSize textureSize READ textureSize WRITE setTextureSize NOTIFY textureSizeChanged)
+
 public:
     QQuickPaintedItem(QQuickItem *parent = 0);
     virtual ~QQuickPaintedItem();
@@ -88,6 +90,9 @@ public:
     qreal contentsScale() const;
     void setContentsScale(qreal);
 
+    QSize textureSize() const;
+    void setTextureSize(const QSize &size);
+
     QColor fillColor() const;
     void setFillColor(const QColor&);
 
@@ -104,6 +109,7 @@ Q_SIGNALS:
     void contentsSizeChanged();
     void contentsScaleChanged();
     void renderTargetChanged();
+    void textureSizeChanged();
 
 protected:
     QQuickPaintedItem(QQuickPaintedItemPrivate &dd, QQuickItem *parent = 0);
